# buscasam

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  TODO.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/scripts/: backup_loop.sh  backup_run.py  build_unsam_areas.py  regenerate_fixture_embeddings.py
backend/src/buscasam/: settings.py
backend/tests/: conftest.py  factories.py
backend/tests/fixtures/: oidc_issuer.py
backend/tests/integration/: test_areas.py  test_areas_api.py  test_auth_api.py  test_blob_store_discard.py  test_chunks_schema.py  test_coauthor_invitations_api.py  test_coauthor_invite_revoke.py  test_coauthor_lifecycle.py  test_docs_api.py  test_docs_related_api.py  test_document_access.py  test_document_access_disclosure.py  test_document_access_manageable.py  test_document_access_moderation.py  test_document_access_readable.py  test_document_access_restorable.py  test_documents_api.py  test_documents_attachments.py  test_documents_authorization.py  test_documents_candidate_discard.py  test_documents_candidate_discard_api.py  test_documents_coauthors_api.py  test_documents_downloads.py  test_documents_get_detail.py  test_documents_get_pending_invitation.py  test_documents_papelera_api.py  test_documents_publish.py  test_documents_replace.py  test_documents_replace_api.py  test_documents_schema.py  test_documents_soft_delete.py  test_documents_soft_delete_api.py  test_documents_worker.py  test_draft_creation.py  test_draft_state.py  test_draft_state_coauthors.py  test_embedding_presence.py  test_indices.py  test_jobs_enqueue.py  test_jobs_fan_out_coauthor_invites.py  (+40 more)
backend/tests/unit/: test_auth_core.py  test_blob_store.py  test_blob_store_architecture.py  test_chunk.py  test_chunk_token_budget.py  (+7 more)
(+273 files in other folders)
