[project]
name = "buscasam"
version = "0.0.0"
description = "BUSCASAM backend"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.6.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buscasam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
