[project]
name = "buscasam"
version = "0.0.0"
description = "BUSCASAM backend"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.6.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "numpy>=2.0",
    "tokenizers>=0.20",
    "authlib>=1.3.2",
    "joserfc>=1.0.0",
    "itsdangerous>=2.2.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.9",
    "procrastinate>=3.0.0",
    "pdfminer.six>=20240706",
    "python-docx>=1.1.2",
    "odfpy>=1.4.1",
    "yake>=0.4.8",
]

[project.optional-dependencies]
ocr = ["ocrmypdf>=16.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "uvicorn>=0.32.0",
    "fpdf2>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buscasam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "ocr_slow: OCR integration tests; require ocrmypdf + Tesseract installed",
]
